[package]
authors = ["The Tor Project",
           "Isis Lovecruft <isis@torproject.org>"]
name = "crypto"
version = "0.0.1"
publish = false
build = "../build.rs"

[lib]
name = "crypto"
path = "lib.rs"

[dependencies]
libc = "=0.2.169"
digest = "=0.10.6"
rand_core = { version = "=0.6.4", default-features = false }

external = { path = "../external" }
smartlist = { path = "../smartlist" }
tor_allocate = { path = "../tor_allocate" }
tor_log = { path = "../tor_log" }

[dev-dependencies]


[features]
# If this feature is enabled, test code which calls Tor C code from Rust will
# execute with `cargo test`.  Due to numerous linker issues (#25386), this is
# currently disabled by default.
test-c-from-rust = []

# We have to define a feature here because doctests don't get cfg(test),
# and we need to disable some C dependencies when running the doctests
# because of the various linker issues.  See
# https://github.com/rust-lang/rust/issues/45599
test_linking_hack = []
